Adds a new property to the colour selectors indicating the associated css Custom Property. Will be revisiting this, as I don't like that custom properties are defined in three places. Implements the activateListeners method on the ThemeConfig class. Adds an onChange method to update custom properties in real time as the user selects new colours. These changes currently do not persist after reload.

--- a/system/templates/apps/theme-config.hbs
+++ b/system/templates/apps/theme-config.hbs
@@ -17,6 +17,7 @@
                     name="headerBackgroundColorSelector"
                     value="{{headerBackgroundColor}}"
                     data-edit="headerBackgroundColor"
+                    data-property="fatex-header-color"
                 >
             </div>
         </div>
@@ -36,6 +37,7 @@
                     name="headerTextColorSelector"
                     value="{{headerTextColor}}"
                     data-edit="headerTextColor"
+                    data-property="fatex-header-text-color"
                 >
             </div>
         </div>
@@ -59,6 +61,7 @@
                     name="primarySheetColorSelector"
                     value="{{primarySheetColor}}"
                     data-edit="primarySheetColor"
+                    data-property="--fatex-primary-color"
                 >
             </div>
         </div>
@@ -78,6 +81,7 @@
                     name="sheetBackgroundColorSelector"
                     value="{{sheetBackgroundColor}}"
                     data-edit="sheetBackgroundColor"
+                    data-property="fatex-sheet-background-color"
                 >
             </div>
         </div>
@@ -97,6 +101,7 @@
                     name="scrollbarColorSelector"
                     value="{{scrollbarColor}}"
                     data-edit="scrollbarColor"
+                    data-property="fatex-scrollbar-color"
                 >
             </div>
         </div>
