Adds a condition to the ThemeConfig class' close method to test whether the user's updates should be saved. Implements the _updateObject method on the ThemeConfig class to store the user's colour settings as user flags. Adds listeners for the remaining buttons for the theme config app.

--- a/system/templates/apps/theme-config.hbs
+++ b/system/templates/apps/theme-config.hbs
@@ -109,7 +109,7 @@
 
     <footer class="sheet-footer flexrow fatex-u-mt-std">
         <button type="submit" name="submit">
-            <i class="fa fa-save"></i>
+            <i class="far fa-save"></i>
             <span>Save</span>
         </button>
         <button type="button" name="reset">
