WIP! Completes a first draft of the custom themes feature, though some custom properties are still missing. There is currently a bug where sometimes one or two of the flags are not remembering their new values after reload. This causes old styles to resurface, and I haven't yet found the cause.

--- a/system/templates/apps/theme-config.hbs
+++ b/system/templates/apps/theme-config.hbs
@@ -61,7 +61,7 @@
                     name="primarySheetColorSelector"
                     value="{{primarySheetColor}}"
                     data-edit="primarySheetColor"
-                    data-property="--fatex-primary-color"
+                    data-property="fatex-primary-color"
                 >
             </div>
         </div>
