Adds the ability to set the sheet shadow color through the new theme configuration settings.

--- a/src/styles/abstract/variables.scss
+++ b/src/styles/abstract/variables.scss
@@ -22,4 +22,6 @@ $fatex-header-text-color: var(--fatex-header-text-color, $light-text-color);
 
 $fatex-primary-color: var(--fatex-primary-color, $primary-color);
 $fatex-sheet-background-color: var(--fatex-sheet-background-color, $sheet-background);
+
+$fatex-shadow-color: var(--fatex-shadow-color, $primary-color);
 $fatex-scrollbar-color: var(--fatex-scrollbar-color, $primary-color);
