--- a/src/styles/components/desk.scss
+++ b/src/styles/components/desk.scss
@@ -48,7 +48,7 @@
 
     &__sidebar {
         min-width: 240px;
-        box-shadow: 12px 0 15px 0 $fatex-primary-color;
+        box-shadow: 12px 0 15px 0 $fatex-shadow-color;
     }
 
     &__tabloid {
