--- a/src/styles/components/header.scss
+++ b/src/styles/components/header.scss
@@ -9,7 +9,7 @@
     font-size: 23px;
     color: $fatex-header-text-color;
     background: $fatex-header-color;
-    box-shadow: 0 2px 15px 0 $fatex-header-color;
+    box-shadow: 0 2px 15px 0 $fatex-shadow-color;
     z-index: 5;
 
     &__combine {
