Adds options to select the two different text colours used in the system interface.

--- a/src/styles/abstract/variables.scss
+++ b/src/styles/abstract/variables.scss
@@ -23,5 +23,8 @@ $fatex-header-text-color: var(--fatex-header-text-color, $light-text-color);
 $fatex-primary-color: var(--fatex-primary-color, $primary-color);
 $fatex-sheet-background-color: var(--fatex-sheet-background-color, $sheet-background);
 
+$fatex-text-color-1: var(--fatex-text-color-1, $primary-text-color);
+$fatex-text-color-2: var(--fatex-text-color-2, $light-text-color);
+
 $fatex-shadow-color: var(--fatex-shadow-color, $primary-color);
 $fatex-scrollbar-color: var(--fatex-scrollbar-color, $primary-color);
