--- a/system/templates/apps/theme-config.hbs
+++ b/system/templates/apps/theme-config.hbs
@@ -83,6 +83,46 @@
         </div>
 
         <div class="form-group">
+            <label>Text Color 1:</label>
+            <div class="form-fields">
+                <input
+                    type="text"
+                    name="textColor1"
+                    value="{{textColor1}}"
+                    data-type="String"
+                    readonly="readonly"
+                >
+                <input
+                    type="color"
+                    name="textColor1Selector"
+                    value="{{textColor1}}"
+                    data-edit="textColor1"
+                >
+            </div>
+            <p class="notes">This should contrast the sheet background.</p>
+        </div>
+
+        <div class="form-group">
+            <label>Text Color 2:</label>
+            <div class="form-fields">
+                <input
+                    type="text"
+                    name="textColor2"
+                    value="{{textColor2}}"
+                    data-type="String"
+                    readonly="readonly"
+                >
+                <input
+                    type="color"
+                    name="textColor2Selector"
+                    value="{{textColor2}}"
+                    data-edit="textColor2"
+                >
+            </div>
+            <p class="notes">This should contrast the primary sheet color.</p>
+        </div>
+
+        <div class="form-group">
             <label>Shadow Color:</label>
             <div class="form-fields">
                 <input
