--- a/src/styles/components/tabs/tab-navigation.scss
+++ b/src/styles/components/tabs/tab-navigation.scss
@@ -15,7 +15,7 @@
         &.active,
         &:hover {
             background: $fatex-primary-color;
-            color: var(--fatex-light-text-color, $light-text-color);
+            color: $fatex-text-color-2;
         }
 
         &::after {
