--- a/src/styles/components/actions.scss
+++ b/src/styles/components/actions.scss
@@ -4,7 +4,7 @@
     align-items: center;
     gap: 10px;
     height: 100%;
-    text-shadow: 1px 1px 2px $shadow-color;
+    text-shadow: 1px 1px 2px $fatex-button-shadow-color;
     pointer-events: none;
     z-index: 4;
 
