--- a/system/templates/apps/template-actors-picker.hbs
+++ b/system/templates/apps/template-actors-picker.hbs
@@ -6,7 +6,7 @@
 {{/inline}}
 
 {{> "systems/fatex/templates/components/app-header.hbs"
-    title="ACTOR.Create"
+    title=AppTitle
     label="FAx.Template.Picker.Label"
     centerPartial="centerPartial"
 }}
