Fixed sheet focus and artwork bug

--- a/system/templates/components/aspects.hbs
+++ b/system/templates/components/aspects.hbs
@@ -6,6 +6,7 @@
                 data-placeholder="{{aspect.data.label}}"
                 contenteditable="true"
                 data-item-id="{{aspect._id}}"
+                data-focus-id="aspect-name-{{aspect._id}}"
             >
                 {{{aspect.data.value}}}
             </div>
