--- a/system/templates/components/consequences.hbs
+++ b/system/templates/components/consequences.hbs
@@ -8,6 +8,7 @@
                 class="fatex-js-consequence-input fatex-text-input"
                 contenteditable="true"
                 data-item-id="{{consequence._id}}"
+                data-focus-id="consequence-name-{{consequence._id}}"
             >
                 {{{consequence.data.value}}}
             </div>
