--- a/src/styles/components/artwork.scss
+++ b/src/styles/components/artwork.scss
@@ -3,11 +3,12 @@
     padding: $component-padding;
 
     &__image {
-        position: relative;
+        vertical-align: bottom;
         width: 100%;
-        height: 200px;
-        background-size: cover;
-        background-position: center center;
+    }
+
+    &__wrapper {
+        position: relative;
 
         &::before {
             @include cutout-top-left(26px);
@@ -16,17 +17,5 @@
         &::after {
             @include cutout-bottom-right(26px);
         }
-    }
-
-    &__handler {
-        position: absolute;
-        width: 100%;
-        height: 100%;
-
-        top: 0;
-        left: 0;
-
-        cursor: pointer;
-        opacity: 0;
     }
 }
