--- a/system/templates/components/artwork.hbs
+++ b/system/templates/components/artwork.hbs
@@ -1,14 +1,9 @@
 <div class="fatex-artwork">
-    <style>
-        .fatex-artwork__image--{{actor._id}} {
-            background-image: url("{{actor.img}}");
-        }
-    </style>
-
     <header class="fatex-headline">
         <h2 class="fatex-headline__text">{{localize "FAx.Sheet.Artwork"}}</h2>
     </header>
 
-    <div class="fatex-artwork__image fatex-artwork__image--{{actor._id}}" title="{{actor.name}}"></div>
-    <img class="fatex-artwork__handler" alt="{{actor.name}}" data-edit="img" src="{{actor.img}}"/>
+    <div class="fatex-artwork__wrapper">
+        <img class="fatex-artwork__image" alt="{{actor.name}}" data-edit="img" src="{{actor.img}}" title="{{actor.name}}" />
+    </div>
 </div>
