--- a/src/styles/components/messages.scss
+++ b/src/styles/components/messages.scss
@@ -1,6 +1,6 @@
 .fatex-message {
     margin: $component-padding;
-    padding: $component-padding / 2;
+    padding: $component-padding * 0.5;
     border: 1px solid $fatex-primary-color;
     background: $message-background;
     border-radius: 5px;
