--- a/src/styles/components/apps/templates.scss
+++ b/src/styles/components/apps/templates.scss
@@ -4,6 +4,7 @@
     height: 100%;
     min-width: 100%;
     gap: $component-padding;
+    flex-wrap: wrap;
 }
 
 .fatex-template {
@@ -12,7 +13,7 @@
     &__actions {
         display: flex;
         flex-direction: column;
-        gap: $component-padding / 2;
+        gap: $component-padding * 0.5;
     }
 
     &__help {
