--- a/src/styles/legacy/chat.scss
+++ b/src/styles/legacy/chat.scss
@@ -1,7 +1,7 @@
 .fatex__headline {
     background: $fatex-primary-color;
     color: var(--fatex-light-text-color, $light-text-color);
-    padding: $component-padding/2 $component-padding * 2 $component-padding/2 $component-padding * 2;
+    padding: $component-padding*0.5 $component-padding * 2 $component-padding*0.5 $component-padding * 2;
     position: relative;
     font-weight: bold;
     text-transform: uppercase;
