--- a/system/templates/components/stress.hbs
+++ b/system/templates/components/stress.hbs
@@ -13,9 +13,9 @@
             </div>
         </header>
 
-        {{#if stress.data.description}}
+        {{#if stress.system.description}}
             <span class="fatex-item-description">
-                {{stress.data.description}}
+                {{stress.system.description}}
             </span>
         {{/if}}
 
