--- a/system/templates/actor/tabs/extras.hbs
+++ b/system/templates/actor/tabs/extras.hbs
@@ -12,14 +12,14 @@
                         <i class="fatex-js-item-sort fatex-actions__icon fa fa-sort"></i>
                         <i class="fatex-js-extra-settings fatex-actions__icon fa fa-cog" data-item="{{extra._id}}"></i>
                         <i class="fatex-js-extra-delete fatex-actions__icon fatex-u-delete fa fa-trash" data-item="{{extra._id}}"></i>
-                        <i class="fatex-js-item-collapse fatex-actions__icon fatex-actions__icon--no-hide fa fa-chevron-up{{#if extra.data.collapsed}} fatex-actions__icon--reverse{{/if}}" data-item="{{extra._id}}"></i>
+                        <i class="fatex-js-item-collapse fatex-actions__icon fatex-actions__icon--no-hide fa fa-chevron-up{{#if extra.system.collapsed}} fatex-actions__icon--reverse{{/if}}" data-item="{{extra._id}}"></i>
                     </div>
                 </header>
 
-                {{#unless extra.data.collapsed}}
-                    {{#if extra.data.description}}
+                {{#unless extra.system.collapsed}}
+                    {{#if extra.system.description}}
                         <div class="fatex-item-description">
-                            {{{extra.data.description}}}
+                            {{{extra.system.description}}}
                         </div>
                     {{/if}}
                 {{/unless}}
