Add reroll and increase buttons

--- a/src/styles/base/foundry-ui.scss
+++ b/src/styles/base/foundry-ui.scss
@@ -11,3 +11,7 @@
     background: $sheet-background;
     color: var(--fatex-primary-text-color, $primary-text-color);
 }
+
+#chat-log .message.whisper {
+    opacity: 0.8;
+}
