Added synched grow animation

--- a/system/templates/chat/roll.hbs
+++ b/system/templates/chat/roll.hbs
@@ -18,7 +18,7 @@
         <span class="fatex-roll__ladder">{{ ladder }}</span>
 
         <div class="fatex-roll-actions">
-            <button data-action="reroll">Reroll</button>
+            <button data-action="reroll"><i class="fas fa-arrows-rotate"></i></button>
             <button data-action="increase">+2</button>
         </div>
     </div>
