--- a/src/styles/components/chat.scss
+++ b/src/styles/components/chat.scss
@@ -9,11 +9,36 @@
     margin: $component-padding auto;
 }
 
+.fatex-rollWrapper {
+    position: relative;
+}
+
+@keyframes grow-shrink {
+    0% {
+        transform: scale(1);
+    }
+    50% {
+        transform: scale(1.2);
+    }
+    100% {
+        transform: scale(1);
+    }
+}
+
 .fatex-roll {
     display: flex;
     flex-direction: column;
     align-items: center;
     color: $fatex-primary-color;
+
+    .fatex-chat__roll--increased & {
+        &__total {
+            animation-name: grow-shrink;
+            animation-duration: 1s;
+            animation-iteration-count: 1;
+            animation-timing-function: ease-in-out;
+        }
+    }
 
     &__ladder {
         font-size: 12px;
@@ -22,6 +47,40 @@
 
     &__total {
         font-weight: 700;
+    }
+}
+
+.fatex-roll-actions {
+    display: flex;
+    position: absolute;
+    left: 3px;
+    top: 50%;
+    transform: translateY(-50%);
+    flex-direction: column;
+    gap: $component-padding;
+    text-align: center;
+
+    button {
+        i {
+            padding: 0;
+            margin: 0;
+        }
+
+        text-align: center;
+        border-radius: 5px;
+        width: 30px;
+        height: 30px;
+        line-height: 1;
+        background-color: transparent;
+        font-family: $primary-font;
+        font-weight: bold;
+        font-size: 14px;
+        white-space: nowrap;
+        border: 2px solid $fatex-primary-color;
+
+        &[data-action="increase"] {
+            text-indent: -2px;
+        }
     }
 }
 
