Added magic system from Guild Codex

--- a/src/styles/abstract/variables.scss
+++ b/src/styles/abstract/variables.scss
@@ -11,6 +11,7 @@ $primary-text-color: #191813;
 $light-text-color: #fff;
 
 $caution-color: rgb(242, 22, 40);
+$magic-color: rgb(160, 25, 31);
 $shadow-color: rgb(160, 160, 160);
 
 // Fonts
