--- a/system/templates/actor/tabs/stunts.hbs
+++ b/system/templates/actor/tabs/stunts.hbs
@@ -23,6 +23,7 @@
                         <i class="fatex-js-item-sort fatex-actions__icon fa fa-sort"></i>
                         <i class="fatex-js-stunt-settings fatex-actions__icon fa fa-cog" data-item="{{stunt._id}}"></i>
                         <i class="fatex-js-stunt-delete fatex-actions__icon fatex-u-delete fa fa-trash" data-item="{{stunt._id}}"></i>
+                        <i class="fatex-js-stunt-chat fatex-actions__icon fatex-actions__icon--no-hide fa fa-comment" data-item="{{stunt._id}}"></i>
                         <i class="fatex-js-item-collapse fatex-actions__icon fatex-actions__icon--no-hide fa fa-chevron-up{{#if stunt.system.collapsed}} fatex-actions__icon--reverse{{/if}}" data-item="{{stunt._id}}"></i>
                     </div>
                 </header>
