"Send extra to chat" feature.
Added same button to "extra", I forgot about it.
Changed the class  and function names. Now they are not so specific about "stunts"
While I was there I explicitly set async:"false" in all .enrichHTML calls if it is not set to "true". In foundry 10 we got warning and in foundry 11 default behaivor was reversed,  and we got [object Object] instead of text. This should fix the problem.

--- a/system/templates/actor/tabs/extras.hbs
+++ b/system/templates/actor/tabs/extras.hbs
@@ -12,6 +12,7 @@
                         <i class="fatex-js-item-sort fatex-actions__icon fa fa-sort"></i>
                         <i class="fatex-js-extra-settings fatex-actions__icon fa fa-cog" data-item="{{extra._id}}"></i>
                         <i class="fatex-js-extra-delete fatex-actions__icon fatex-u-delete fa fa-trash" data-item="{{extra._id}}"></i>
+                        <i class="fatex-js-send-to-chat fatex-actions__icon fatex-actions__icon--no-hide fa fa-comment" data-item="{{extra._id}}"></i>
                         <i class="fatex-js-item-collapse fatex-actions__icon fatex-actions__icon--no-hide fa fa-chevron-up{{#if extra.system.collapsed}} fatex-actions__icon--reverse{{/if}}" data-item="{{extra._id}}"></i>
                     </div>
                 </header>
